@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -16,20 +16,21 @@
     <parent>
         <groupId>com.sun.xml.ws</groupId>
         <artifactId>project</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>sdo-eclipselink-plugin</artifactId>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
 
     <name>JAX-WS RI Eclipselink SDO Plugin</name>
     <description>Pluggable databinding module employing Eclipselink SDO</description>
 
     <properties>
         <spotbugs.exclude>${project.basedir}/exclude.xml</spotbugs.exclude>
+        <argLine/>
     </properties>
 
     <dependencies>
@@ -40,6 +41,10 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>commonj.sdo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.moxy</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -54,24 +59,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <excludeScope>provided</excludeScope>
-                            <stripVersion>true</stripVersion>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -92,11 +79,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <!--TODO tests are skipped due to
-                        Modules commonj.sdo and org.eclipse.persistence.sdo export package commonj.sdo.impl to module ha.api
-                        remove after Eclipselink split package resolution.
-                    -->
-                    <skip>true</skip>
+                    <argLine>
+                        --add-exports com.sun.xml.ws.sdo/com.sun.xml.ws.sdo.test=ALL-UNNAMED
+                        --add-exports com.sun.xml.ws.sdo/com.sun.xml.ws.sdo.test.add=ALL-UNNAMED
+                        --add-exports com.sun.xml.ws.sdo/com.sun.xml.ws.sdo.test.helloSDO=ALL-UNNAMED
+                        --add-exports com.sun.xml.ws.sdo/com.sun.xml.ws.sdo.sample.service=ALL-UNNAMED
+                        --add-exports com.sun.xml.ws.sdo/com.sun.xml.ws.sdo.sample.service=com.sun.xml.ws
+                        --add-exports com.sun.xml.ws.sdo/com.sun.xml.ws.sdo.sample.service.types=ALL-UNNAMED
+                        @{argLine}
+                    </argLine>
+                    <forkCount>1</forkCount>
                 </configuration>
             </plugin>
             <plugin>
@@ -117,7 +109,7 @@
             <id>osgi-bundle</id>
             <activation>
                 <property>
-                    <name>!cobertura-build</name>
+                    <name>!jacoco-build</name>
                 </property>
             </activation>
             <build>
@@ -134,10 +126,8 @@
                                 </goals>
                                 <configuration>
                                     <instructions>
-                                        <_removeheaders>Bnd-LastModified,Include-Resource,Private-Package</_removeheaders>
                                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                                         <Import-Package>
-                                            javax.activation;version=!,
                                             commonj.sdo.*;version=!,
                                             org.eclipse.persistence.*;version=!,
                                             *
