@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2012, 2019 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2012, 2022 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -16,14 +16,14 @@
     <parent>
         <groupId>com.sun.xml.ws</groupId>
         <artifactId>project</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>servlet</artifactId>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
 
     <name>JAX-WS RI Servlet Support (servlet)</name>
     <description>Servlet Support for JAX-WS RI</description>
@@ -41,80 +41,4 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                        <configuration>
-                            <compilerArgs>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.xml.ws.servlet=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <additionalOptions>--add-reads com.sun.xml.ws.servlet=ALL-UNNAMED</additionalOptions>
-                </configuration>
-            </plugin>
-        </plugins>
-<!--
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>osgi-bundle</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>bundle</goal>
-                        </goals>
-                        <configuration>
-                            <instructions>
-                                <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                                <Export-Package>
-                                    com.sun.xml.ws.developer.servlet;version=${project.version}
-                                    com.sun.xml.ws.transport.http.servlet;version=${project.version}
-                                </Export-Package>
-                                <Import-Package>
-                                    com.oracle.webservices.api.message;version=${jaxws-rt.version},
-                                    com.sun.istack.localization;version=${jaxb-impl.version},
-                                    com.sun.xml.ws.api;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.api.ha;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.api.message;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.api.model.wsdl;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.api.server;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.resources;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.server;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.transport;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.transport.http;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.util.exception;version=${jaxws-rt.version},
-                                    com.sun.xml.ws.util.localization;version=${jaxws-rt.version},
-                                    javax.jws,
-                                    javax.servlet;version=${servlet-api.version},
-                                    javax.servlet.annotation;version=${servlet-api.version},
-                                    javax.servlet.http;version=${servlet-api.version},
-                                    javax.xml.namespace,
-                                    javax.xml.ws;version=${jaxws-api.osgiVersion},
-                                    javax.xml.ws.http;version=${jaxws-api.osgiVersion},
-                                    javax.xml.ws.spi;version=${jaxws-api.osgiVersion},
-                                    org.glassfish.external.probe.provider.annotations
-                                </Import-Package>
-                            </instructions>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
--->
-    </build>
 </project>
